--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
